<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:id="@+id/menugroup1">

    <item android:id="@+id/menu1"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/popup_menu_item_1"/>

    <item android:id="@+id/menu2"
        android:title="@string/popup_menu_item_2"/>

    <item android:id="@+id/menu3"
        android:title="@string/popup_menu_item_3">
        <menu>
<item
    android:id="@+id/submenu"
    android:title="Подменю"/>
        </menu>

    </item>
</group>
    <group android:id="@+id/menugroup2">
        <item
            android:id="@+id/meni4"
            android:checkable="true"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/popup_menu_item_4"/>
        <item
            android:id="@+id/menu5"
            android:title="@string/popup_menu_item_5"
            android:enabled="false"/>
        <item
            android:id="@+id/menu6"
            android:title="@string/popup_menu_item_6"/>
    </group>
</menu>